# arena_3.0_course

./: .gitignore  license.md  pyproject.toml  readme.md
course_notebooks/chapter0_fundamentals/: 0.1_ray_tracing.ipynb  [0.0] Prerequisites (solutions).ipynb  [0.1] Ray Tracing (solutions).ipynb
course_notebooks/chapter1_interpretability/: [1.1] Transformer from Scratch (solutions).ipynb  [1.2] Intro to Mech Interp (solutions).ipynb  [1.3] Indirect Object Identification (solutions).ipynb  [1.5] Function Vectors & Model Steering (refactored solutions).ipynb  [1.6] OthelloGPT (solutions).ipynb  [1.7] Balanced Bracket Classifier (solutions).ipynb
playground/: anthropic_toy_cis.ipynb  coding_interview_playground.ipynb  einops_intro.ipynb  jax_and_einops.ipynb  mini.ipynb  sparse_autoencoders_for_interpretability_ccn_2024_tutorial_jb.ipynb
